Añadimos cadena de conexion clase coworkingdbcontext e interfaz Icoworkingdbconetext, tambien se añaden paquetes nuget microsoft.entitiyframeworkcore.sqlServer a los proyectos de DataAcces

--- a/Coworking.Api/appsettings.json
+++ b/Coworking.Api/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "DataBaseConnection": "Data Source=TITAN\\SQLEXPRESS;Initial Catalog=coworkingdb;Integrated Security=True"
+  },
   "AllowedHosts": "*"
 }
