--- a/Coworking.Api.DataAcces.Contracts/Coworking.Api.DataAcces.Contracts.csproj
+++ b/Coworking.Api.DataAcces.Contracts/Coworking.Api.DataAcces.Contracts.csproj
@@ -4,4 +4,14 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Entities\" />
+    <Folder Include="Enum\" />
+    <Folder Include="Repositories\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.12" />
+  </ItemGroup>
+
 </Project>
