--- a/Coworking.Api.DataAcces/Coworking.Api.DataAcces.csproj
+++ b/Coworking.Api.DataAcces/Coworking.Api.DataAcces.csproj
@@ -1,7 +1,20 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Folder Include="Mappers\" />
+    <Folder Include="Repositories\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.12" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Coworking.Api.DataAcces.Contracts\Coworking.Api.DataAcces.Contracts.csproj" />
+  </ItemGroup>
 
 </Project>
