--- a/Coworking.Api/Coworking.Api.csproj
+++ b/Coworking.Api/Coworking.Api.csproj
@@ -8,4 +8,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Coworking.Api.DataAcces\Coworking.Api.DataAcces.csproj" />
+  </ItemGroup>
+
 </Project>
