--- a/Coworking.Api/appsettings.Development.json
+++ b/Coworking.Api/appsettings.Development.json
@@ -5,5 +5,8 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "DataBaseConnection": "Data Source=TITAN\\SQLEXPRESS;Initial Catalog=coworkingdb;Integrated Security=True"
   }
 }
