--- a/Coworking.Api.Aplication/Coworking.Api.Aplication.csproj
+++ b/Coworking.Api.Aplication/Coworking.Api.Aplication.csproj
@@ -1,7 +1,16 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Folder Include="Mappers\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Coworking.Api.Application.Contracts\Coworking.Api.Application.Contracts.csproj" />
+    <ProjectReference Include="..\Coworking.Api.DataAcces.Contracts\Coworking.Api.DataAcces.Contracts.csproj" />
+  </ItemGroup>
 
 </Project>
