--- a/Coworking.Api.CrossCuting/Coworking.Api.CrossCuting.csproj
+++ b/Coworking.Api.CrossCuting/Coworking.Api.CrossCuting.csproj
@@ -1,7 +1,18 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="5.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Coworking.Api.Aplication\Coworking.Api.Aplication.csproj" />
+    <ProjectReference Include="..\Coworking.Api.Application.Contracts\Coworking.Api.Application.Contracts.csproj" />
+    <ProjectReference Include="..\Coworking.Api.DataAcces.Contracts\Coworking.Api.DataAcces.Contracts.csproj" />
+    <ProjectReference Include="..\Coworking.Api.DataAcces\Coworking.Api.DataAcces.csproj" />
+  </ItemGroup>
 
 </Project>
