--- a/Coworking.Api.DataAcces/Coworking.Api.DataAcces.csproj
+++ b/Coworking.Api.DataAcces/Coworking.Api.DataAcces.csproj
@@ -5,10 +5,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Mappers\" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.12" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.12">
       <PrivateAssets>all</PrivateAssets>
@@ -17,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Coworking.Api.Bussines\Coworking.Api.Bussines.csproj" />
     <ProjectReference Include="..\Coworking.Api.DataAcces.Contracts\Coworking.Api.DataAcces.Contracts.csproj" />
   </ItemGroup>
 
