--- a/Coworking.Api.Application.Contracts/Coworking.Api.Application.Contracts.csproj
+++ b/Coworking.Api.Application.Contracts/Coworking.Api.Application.Contracts.csproj
@@ -9,4 +9,8 @@
     <Folder Include="Models\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Coworking.Api.Bussines\Coworking.Api.Bussines.csproj" />
+  </ItemGroup>
+
 </Project>
